--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_community">커뮤니티</string>
     <string name="menu_settings">설정하기</string>
     <string name="menu_list">회원관리</string>
+    <string name="menu_logout">로그아웃</string>
     <string name="menu_admin">admin menu</string>
 
     <string name="login">로그인</string>
